# guizero-autogrid

./: .editorconfig  .flake8  .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic.py  extended.py  tinter.py
src/guizero_autogrid/: __init__.py  mixins.py  util.py  widgets.py
testing/: pyproject.toml
