[tool.poetry]
name = "guizero-autogrid"
version = "0.1.0"
description = "Autogrid mixin for guizero library"
authors = ["Innovatedev <guizero.autogrid@innovate.dev>"]
license = "BSD-3-Clause"

[tool.poe.tasks]
qa = "black . --check && isort . --check && flake8"
format = "black . && isort ."

[tool.isort]
profile = "black"
src_paths = ["src" , "examples"]

[tool.poetry.dependencies]
python = "^3.7"
guizero = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
poethepoet = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
